Fix control editor and file writing for notes editor